Version 2.1.4
March 9 2010
================================================================

* Rewritten the package loader to use event listeners to trigger
  loading of dependencies rather than polling for readiness.

* package.js and loader.js no longer depend on or include the
  JS.Class core; you must call `require()` to use JS.Class,
  JS.Module, JS.Interface or JS.Singleton.


Version 2.1.3
October 10 2009
================================================================

* Fixes the load() function in the Packages DSL, and adds some
  caching to improve lookup times for finding a package by the
  name of its provided objects.

* Non-existent package errors are now defered until you require()
  an object rather than being thrown at package definition time.
  This means require() won't complain about being passed native
  objects or objects loaded by other means, as long as the
  required object does actually exist.

* MethodChain now adds instance methods from Modules, and adds
  methods that were defined *before* MethodChain was loaded.

* State now supports callSuper() to state methods imported from
  mixins; previously you could only callSuper() to the superclass.


Version 2.1.2
August 11 2009
================================================================

* LinkedList was defined twice in the stdlib.js bundle; this
  is now fixed [thanks @skim].


Version 2.1.1
July 6 2009
================================================================

* Fixes a couple of Set bugs: Set#isProperSuperset had a missing
  argument, and incomparable objects were being allowed into
  SortedSet collections.


Version 2.1.0
June 8 2009
================================================================

* New libraries: ConstantScope, Hash, HashSet.

* Improved package manager, supports parallel downloads in
  web browsers and now also works on server-side platforms
  (tested on SpiderMonkey, Rhino and V8). Also supports custom