@@ -9,6 +9,9 @@ March 9 2010
   JS.Class core; you must call `require()` to use JS.Class,
   JS.Module, JS.Interface or JS.Singleton.
 
+* Fix bug in browser package loader in environments that have
+  a global `console` object with no `info()` method.
+
 
 Version 2.1.3
 October 10 2009
